--- a/CSS/htask2.css
+++ b/CSS/htask2.css
@@ -88,10 +88,18 @@
     font-size: 24px;
     color: #fd5f2f;
 }
+.card-content hr {
+  width: 98%;
+  margin: auto;
+  height: 2px;
+  border: none;
+  background: #fe9aa4;
+}
 .foot {
-    background-color: #2c3d51;
+    background-color: #333333;
     padding: 40px;
     margin-top: 200px;
+    border-top: 5px solid #fe9aa4;
 }
 .foot p {
     text-align: center;
